fix header on small screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,7 @@ a {
   overflow: hidden;
   height: 100vh;
   width: 100vw;
+  min-width: 1050px;
 }
 
 .main {
@@ -26,6 +27,7 @@ a {
   z-index: 1;
   width: 100%;
   height: 100%;
+  min-width: 1050px;
 }
 
 .backgroundEffects {
